Ensure scrollbars can be clicked wherever this functionality is expected

--- a/packages/frontend/src/features/Design/components/Interactive/components/Presets/index.module.css
+++ b/packages/frontend/src/features/Design/components/Interactive/components/Presets/index.module.css
@@ -4,7 +4,7 @@
     grid-template-columns: minmax(0, 1fr);
     gap: 8px;
 
-    pointer-events: none;
+    pointer-events: all;
 
     width: 100%;
     height: 100%;
@@ -17,7 +17,7 @@
 
     overflow-y: auto;
 
-    pointer-events: none;
+    pointer-events: all;
 
     border: 1px solid #000;
     background-color: #fff;
